--- a/src/okTab.scss
+++ b/src/okTab.scss
@@ -98,7 +98,7 @@ $borderColor: #b2b3b0;
 		width:94%;
 		padding:0 3%;
 		min-height:100px;
-		-webkit-box-shadow:  0px 0px 4px 1px $borderColor0;
+		-webkit-box-shadow:  0px 0px 4px 1px $borderColor;
 		-moz-box-shadow:  0px 0px 4px 1px $borderColor;
 		box-shadow:  0px 0px 4px 0 $borderColor;
 		-moz-border-radius-topleft: 5px;
